--- a/src/app/components/videogames/videogames.component.html
+++ b/src/app/components/videogames/videogames.component.html
@@ -47,6 +47,15 @@
                         </p>
                     </figcaption>
                 </figure>
+                <figure class="article">
+                    <img src="./quecarajo.jpg" />
+                    <figcaption>
+                        <h3>¿Que?</h3>
+                        <p>
+                            ¿Que?
+                        </p>
+                    </figcaption>
+                </figure>
             </div>
         </div>
     </div>
