mini fix click lumberjack

--- a/src/app/components/videogames/videogames.component.html
+++ b/src/app/components/videogames/videogames.component.html
@@ -4,8 +4,8 @@
             <h2><strong>Mis Juegos<span>( 4 ) <small>te ponen</small></span></strong></h2>
 
             <div class="cards">
-                <figure class="card">
-                    <img src="./lumberjack.jpg" (click)="openModal()" />
+                <figure class="card" (click)="openModal()">
+                    <img src="./lumberjack.jpg"  />
                     <figcaption style="background: rgba(0, 0, 0, 0.8);">Lumberjack</figcaption>
 
                 </figure>
